Optimized customer reward aggregation logic