@@ -1,6 +1,7 @@
 package com.retail.controller;
 
 import com.retail.dto.CustomerRewardResponse;
+import com.retail.dto.TransactionResponse;
 import com.retail.service.RewardService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -11,9 +12,10 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
+import static java.util.Arrays.asList;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
@@ -29,11 +31,20 @@ public class RewardControllerTest {
     private RewardService rewardService;
 
     @Test
-    @DisplayName("Test getting rewards for all customers")
-    void testGetAllCustomerRewards() throws Exception {
-        List<CustomerRewardResponse> mockResponse = Arrays.asList(
-                new CustomerRewardResponse(1L, "John", 120),
-                new CustomerRewardResponse(2L, "Jane", 80)
+    @DisplayName("Should return rewards for all customers")
+    void shouldReturnAllCustomerRewards() throws Exception {
+        List<TransactionResponse> johnTransactions = asList(
+                new TransactionResponse(101L, 120.75, LocalDate.of(2024, 3, 15)),
+                new TransactionResponse(102L, 90.50, LocalDate.of(2024, 4, 10))
+        );
+
+        List<TransactionResponse> janeTransactions = List.of(
+                new TransactionResponse(103L, 70.00, LocalDate.of(2024, 3, 20))
+        );
+
+        List<CustomerRewardResponse> mockResponse = asList(
+                new CustomerRewardResponse(1L, "John", Map.of("MARCH", 70, "APRIL", 50), 120, johnTransactions),
+                new CustomerRewardResponse(2L, "Jane", Map.of("MARCH", 80), 80, janeTransactions)
         );
 
         LocalDate startDate = LocalDate.of(2024, 3, 1);
@@ -47,15 +58,23 @@ public class RewardControllerTest {
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.size()").value(2))
-                .andExpect(jsonPath("$[0].customerId").value(1L))
+                .andExpect(jsonPath("$[0].customerId").value(1))
                 .andExpect(jsonPath("$[0].customerName").value("John"))
-                .andExpect(jsonPath("$[0].rewardPoints").value(120));
+                .andExpect(jsonPath("$[0].totalRewards").value(120))
+                .andExpect(jsonPath("$[0].transactions.size()").value(2));
     }
 
     @Test
-    @DisplayName("Test getting rewards for specific customer")
-    void testGetCustomerRewardById() throws Exception {
-        CustomerRewardResponse mockResponse = new CustomerRewardResponse(1L, "John", 150);
+    @DisplayName("Should return rewards for a specific customer")
+    void shouldReturnCustomerRewardById() throws Exception {
+        List<TransactionResponse> transactions = asList(
+                new TransactionResponse(101L, 120.75, LocalDate.of(2024, 3, 15)),
+                new TransactionResponse(102L, 90.00, LocalDate.of(2024, 4, 10))
+        );
+
+        CustomerRewardResponse mockResponse = new CustomerRewardResponse(
+                1L, "John",Map.of("MARCH", 70, "APRIL", 80), 150, transactions
+        );
 
         LocalDate startDate = LocalDate.of(2024, 3, 1);
         LocalDate endDate = LocalDate.of(2024, 6, 1);
@@ -67,14 +86,17 @@ public class RewardControllerTest {
                         .param("endDate", endDate.toString())
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.customerId").value(1L))
+                .andExpect(jsonPath("$.customerId").value(1))
                 .andExpect(jsonPath("$.customerName").value("John"))
-                .andExpect(jsonPath("$.rewardPoints").value(150));
+                .andExpect(jsonPath("$.totalRewards").value(150))
+                .andExpect(jsonPath("$.monthlyRewards.MARCH").value(70))
+                .andExpect(jsonPath("$.monthlyRewards.APRIL").value(80))
+                .andExpect(jsonPath("$.transactions.size()").value(2));
     }
 
     @Test
-    @DisplayName("Test validation failure: missing startDate")
-    void testMissingStartDateParam() throws Exception {
+    @DisplayName("Should fail when startDate is missing")
+    void shouldReturnBadRequestOnMissingStartDate() throws Exception {
         mockMvc.perform(get("/api/rewards")
                         .param("endDate", "2024-06-01")
                         .contentType(MediaType.APPLICATION_JSON))
@@ -82,8 +104,8 @@ public class RewardControllerTest {
     }
 
     @Test
-    @DisplayName("Test validation failure: invalid date format")
-    void testInvalidDateParam() throws Exception {
+    @DisplayName("Should fail on invalid date format")
+    void shouldReturnBadRequestOnInvalidDate() throws Exception {
         mockMvc.perform(get("/api/rewards")
                         .param("startDate", "invalid-date")
                         .param("endDate", "2024-06-01")
